WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88296
REGRESSION (
r118197
): PluginStrategy should be used even if ENABLE(NETSCAPE_PLUGIN_API) is false
https://bugs.webkit.org/show_bug.cgi?id=88296
Summary
REGRESSION (r118197): PluginStrategy should be used even if ENABLE(NETSCAPE_P...
Andy Estes
Reported
2012-06-04 23:28:00 PDT
<
http://trac.webkit.org/changeset/118197
> changed PluginData to only call into PluginStrategy if ENABLE(NETSCAPE_PLUGIN_API) is true. This isn't correct, since some ports support non-Netscape plug-ins and still use PluginStrategy (e.g. Apple's OS X port).
Attachments
Patch
(1.93 KB, patch)
2012-06-05 00:08 PDT
,
Andy Estes
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2012-06-05 00:08:43 PDT
Created
attachment 145707
[details]
Patch
mitz
Comment 2
2012-06-05 00:30:28 PDT
Comment on
attachment 145707
[details]
Patch r=me if it doesn’t break any builds
Andy Estes
Comment 3
2012-06-05 11:28:56 PDT
Committed
r119506
: <
http://trac.webkit.org/changeset/119506
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug