REGRESSION (r118197): PluginStrategy should be used even if ENABLE(NETSCAPE_PLUGIN_API) is false https://bugs.webkit.org/show_bug.cgi?id=88296

Reviewed by Dan Bernstein.

refresh() and initPlugins() should call into PluginStrategy even if
ENABLE(NETSCAPE_PLUGIN_API) is false. Some ports support non-Netscape
plug-ins, so PluginStrategy should be consulted even if Netscape
plug-ins specifically are disabled.

Ports that support platform strategies but not Netscape plug-ins should
handle this inside their PluginStrategy rather than modifying generic
plug-in code.

* plugins/PluginData.cpp:
(WebCore::PluginData::refresh):
(WebCore::PluginData::initPlugins):

Canonical link: https://commits.webkit.org/106169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119506 268f45cc-cd09-0410-ab3c-d52691b4dbfc