Source/WebCore/plugins/PluginData.cpp
@@ -67,20 +67,14 @@ String PluginData::pluginNameForMimeType(const String& mimeType) const
 #if USE(PLATFORM_STRATEGIES)
 void PluginData::refresh()
 {
-#if ENABLE(NETSCAPE_PLUGIN_API)
     platformStrategies()->pluginStrategy()->refreshPlugins();
-#endif
 }
 
 void PluginData::initPlugins(const Page* page)
 {
-#if ENABLE(NETSCAPE_PLUGIN_API)
     ASSERT(m_plugins.isEmpty());
     
     platformStrategies()->pluginStrategy()->getPluginInfo(page, m_plugins);
-#else
-    UNUSED_PARAM(page);
-#endif
 }
 #endif
 
